[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Pixels, pixels, pixels..
home_page = https://github.com/sthagen/subtractor

keywords =
    csv
    developer-tools
    ini-files
    json
    lint
    toml
    xml
    yaml
    validation

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = subtractor

project_urls =
    Bug Tracker = https://github.com/sthagen/subtractor/issues
    Documentation = https://sthagen.github.io/subtractor
    Source Code = https://github.com/sthagen/subtractor

url = https://github.com/sthagen/subtractor
version = 2021.10.24


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools

[options]
python_requires = >=3.8

install_requires =
    Pillow >= 9.2.0
    pixelmatch >= 0.3.0
    pypng >= 0.0.21
    typer >= 0.5.0

packages = find:

[options.entry_points]
console_scripts =
    subtractor = subtractor.cli:app

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = tests
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 15
inline-quotes = '
multiline-quotes = """
ignore = E203, W503

[coverage:run]
branch = True

[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py

[isort]
line_length=120
known_first_party=mapology
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[mypy]
strict = True
implicit_reexport = True
